--- a/force-app/main/default/classes/StringUtilsTest.cls
+++ b/force-app/main/default/classes/StringUtilsTest.cls
@@ -293,42 +293,37 @@ private class StringUtilsTest {
     }
 
     @isTest(SeeAllData=false)
-    static void XXXXX() {
+    static void endsWith3args() {
 //        private static Boolean endsWith(final String str, final String suffix, final Boolean ignoreCase) {
     }
 
     @isTest(SeeAllData=false)
-    static void XXXXX() {
-    }
-    
-
+    static void equals2args() {
+/*
         * StringUtils.equals(null, null)   = true
         * StringUtils.equals(null, 'abc')  = false
         * StringUtils.equals('abc', null)  = false
         * StringUtils.equals('abc', 'abc') = true
         * StringUtils.equals('abc', 'ABC') = false
        global static Boolean equals(final String cs1, final String cs2) {
-
+*/
+}
+    
     @isTest(SeeAllData=false)
-    static void XXXXX() {
-    }
-        
-
-
-     * StringUtils.equalsIgnoreCase(null, null)   = true
+    static void equalsIgnoreCase2args() {
+    /*     * StringUtils.equalsIgnoreCase(null, null)   = true
      * StringUtils.equalsIgnoreCase(null, 'abc')  = false
      * StringUtils.equalsIgnoreCase('abc', null)  = false
      * StringUtils.equalsIgnoreCase('abc', 'abc') = true
      * StringUtils.equalsIgnoreCase('abc', 'ABC') = true
     global static Boolean equalsIgnoreCase(final String cs1, final String cs2) {
+        */
+    }
+
 
     @isTest(SeeAllData=false)
-    static void XXXXX() {
-    }
-    
-
-
-     * StringUtils.getDigits(null)  = null
+    static void getDigits() {
+/*     * StringUtils.getDigits(null)  = null
      * StringUtils.getDigits('')    = ''
      * StringUtils.getDigits('abc') = ''
      * StringUtils.getDigits('1000$') = '1000'
@@ -336,13 +331,12 @@ private class StringUtilsTest {
      * StringUtils.getDigits('(541) 754-3010') = '5417543010'
      * StringUtils.getDigits('\u0967\u0968\u0969') = '\u0967\u0968\u0969'
     global static String getDigits(final String str) {
+*/
+    }
 
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
+    @isTest(SeeAllData=false)
+    static void indexOf2args() {
+    /*
      * StringUtils.indexOf(null, *)          = -1
      * StringUtils.indexOf(*, null)          = -1
      * StringUtils.indexOf('', '')           = 0
@@ -352,24 +346,23 @@ private class StringUtilsTest {
      * StringUtils.indexOf('aabaabaa', 'ab') = 1
      * StringUtils.indexOf('aabaabaa', '')   = 0
     global static Integer indexOf(final String seq, final String searchSeq) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+        */
+    }
     
 
-     * StringUtils.indexOf(null, *)         = -1
+    @isTest(SeeAllData=false)
+    static void indexOf2args2() {
+/*     * StringUtils.indexOf(null, *)         = -1
      * StringUtils.indexOf('', *)           = -1
      * StringUtils.indexOf('aabaabaa', 'a') = 0
      * StringUtils.indexOf('aabaabaa', 'b') = 2
     global static Integer indexOf(final String seq, final Integer searchChar) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+        */
+    }
     
-
-
+    @isTest(SeeAllData=false)
+    static void isAllLowerCase() {
+/*
      * StringUtils.isAllLowerCase(null)   = false
      * StringUtils.isAllLowerCase('')     = false
      * StringUtils.isAllLowerCase('  ')   = false
@@ -379,12 +372,12 @@ private class StringUtilsTest {
      * StringUtils.isAllLowerCase('ab1c') = false
      * StringUtils.isAllLowerCase('ab/c') = false
     global static Boolean isAllLowerCase(final String cs) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+        */
+    }
     
-
+    @isTest(SeeAllData=false)
+    static void isAllUpperCase() {
+/*
      * StringUtils.isAllUpperCase(null)   = false
      * StringUtils.isAllUpperCase('')     = false
      * StringUtils.isAllUpperCase('  ')   = false
@@ -394,26 +387,24 @@ private class StringUtilsTest {
      * StringUtils.isAllUpperCase('A1C')  = false
      * StringUtils.isAllUpperCase('A/C')  = false
     global static Boolean isAllUpperCase(final String cs) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+        */
+    }
     
 
-     * StringUtils.isAlpha(null)   = false
+    @isTest(SeeAllData=false)
+    static void isAlpha() {
+/*     * StringUtils.isAlpha(null)   = false
      * StringUtils.isAlpha('')     = false
      * StringUtils.isAlpha('  ')   = false
      * StringUtils.isAlpha('abc')  = true
      * StringUtils.isAlpha('ab2c') = false
      * StringUtils.isAlpha('ab-c') = false
     global static Boolean isAlpha(final String cs) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/  }
     
-
-     * StringUtils.isAlphanumeric(null)   = false
+    @isTest(SeeAllData=false)
+    static void isAlphanumeric() {
+/*     * StringUtils.isAlphanumeric(null)   = false
      * StringUtils.isAlphanumeric('')     = false
      * StringUtils.isAlphanumeric('  ')   = false
      * StringUtils.isAlphanumeric('abc')  = true
@@ -421,33 +412,27 @@ private class StringUtilsTest {
      * StringUtils.isAlphanumeric('ab2c') = true
      * StringUtils.isAlphanumeric('ab-c') = false
     global static Boolean isAlphanumeric(final String cs) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/  
+    }
     
-
-     @isTest(SeeAllData=false)
-     static void isAnyBlankTest() {
-         System.assertEquals(true, StringUtils.isAnyBlank((String) null));
-         //* StringUtils.isAnyBlank((String[]) null)  = false
-         System.assertEquals(true, StringUtils.isAnyBlank(null, 'foo'));
-         System.assertEquals(true, StringUtils.isAnyBlank(null, null));
-         System.assertEquals(true, StringUtils.isAnyBlank('', 'bar'));
-         System.assertEquals(true, StringUtils.isAnyBlank('bob', ''));
-         System.assertEquals(true, StringUtils.isAnyBlank('  bob  ', null));
-         System.assertEquals(true, StringUtils.isAnyBlank(' ', 'bar'));
-         //* StringUtils.isAnyBlank(new String[] {})  = false
-         //* StringUtils.isAnyBlank(new String[]{''}) = true
-         System.assertEquals(false, StringUtils.isAnyBlank('foo', 'bar'));
+    @isTest(SeeAllData=false)
+    static void isAnyBlankTest() {
+        System.assertEquals(true, StringUtils.isAnyBlank((String) null));
+        //* StringUtils.isAnyBlank((String[]) null)  = false
+        System.assertEquals(true, StringUtils.isAnyBlank(null, 'foo'));
+        System.assertEquals(true, StringUtils.isAnyBlank(null, null));
+        System.assertEquals(true, StringUtils.isAnyBlank('', 'bar'));
+        System.assertEquals(true, StringUtils.isAnyBlank('bob', ''));
+        System.assertEquals(true, StringUtils.isAnyBlank('  bob  ', null));
+        System.assertEquals(true, StringUtils.isAnyBlank(' ', 'bar'));
+        //* StringUtils.isAnyBlank(new String[] {})  = false
+        //* StringUtils.isAnyBlank(new String[]{''}) = true
+        System.assertEquals(false, StringUtils.isAnyBlank('foo', 'bar'));
      }
 
-     @isTest(SeeAllData=false)
-     static void XXXXX() {
-     }
- 
-
-     * StringUtils.isAnyEmpty((String) null)    = true
+    @isTest(SeeAllData=false)
+    static void isAnyEmpty() {
+/*     * StringUtils.isAnyEmpty((String) null)    = true
      * StringUtils.isAnyEmpty((String[]) null)  = false
      * StringUtils.isAnyEmpty(null, 'foo')      = true
      * StringUtils.isAnyEmpty('', 'bar')        = true
@@ -458,14 +443,12 @@ private class StringUtilsTest {
      * StringUtils.isAnyEmpty(new String[]{})   = false
      * StringUtils.isAnyEmpty(new String[]{''}) = true
     global static Boolean isAnyEmpty(final String cs1, String cs2) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-
-     * StringUtils.isAsciiPrintable(null)     = false
+*/     
+    }
+ 
+    @isTest(SeeAllData=false)
+    static void isAsciiPrintable() {
+/*     * StringUtils.isAsciiPrintable(null)     = false
      * StringUtils.isAsciiPrintable('')       = true
      * StringUtils.isAsciiPrintable(' ')      = true
      * StringUtils.isAsciiPrintable('Ceki')   = true
@@ -477,6 +460,8 @@ private class StringUtilsTest {
      * StringUtils.isAsciiPrintable('\u007f') = false
      * StringUtils.isAsciiPrintable('Ceki G\u00fclc\u00fc') = false
     global static Boolean isAsciiPrintable(final String cs) {
+*/   
+    }
 
     @isTest(SeeAllData=false)
     static void isBlankTest01() {
@@ -488,22 +473,19 @@ private class StringUtilsTest {
     }
 
     @isTest(SeeAllData=false)
-    static void XXXXX() {
-    }
-
-
-    * StringUtils.isEmpty(null)      = true
+    static void isEmpty() {
+/*    * StringUtils.isEmpty(null)      = true
     * StringUtils.isEmpty('')        = true
     * StringUtils.isEmpty(' ')       = false
     * StringUtils.isEmpty('bob')     = false
     * StringUtils.isEmpty('  bob  ') = false
    global static Boolean isEmpty(final String cs) {
-
-    @isTest(SeeAllData=false)
-    static void XXXXX() {
+*/    
     }
 
-
+    @isTest(SeeAllData=false)
+    static void isMixedCase() {
+/*
     * StringUtils.isMixedCase(null)    = false
     * StringUtils.isMixedCase('')      = false
     * StringUtils.isMixedCase('ABC')   = false
@@ -514,11 +496,8 @@ private class StringUtilsTest {
     * StringUtils.isMixedCase('a/C')   = true
     * StringUtils.isMixedCase('aC\t')  = true
    global static Boolean isMixedCase(final String cs) {
-
-
-
-
-
+*/    
+    }
 
     @isTest(SeeAllData=false)
     static void isNonBlankTest() {
@@ -535,30 +514,34 @@ private class StringUtilsTest {
         System.assertEquals(true, StringUtils.isNoneBlank('foo', 'bar'));
     }
 
-
+    @isTest(SeeAllData=false)
+    static void isNotBlank() {
+/*
     * StringUtils.isNotBlank(null)      = false
     * StringUtils.isNotBlank('')        = false
     * StringUtils.isNotBlank(' ')       = false
     * StringUtils.isNotBlank('bob')     = true
     * StringUtils.isNotBlank('  bob  ') = true
    global static Boolean isNotBlank(final String cs) {
+*/    
+    }
 
 
     @isTest(SeeAllData=false)
-    static void XXXXX() {
-    }
-
+    static void isNotEmpty() {
+    /*
     * StringUtils.isNotEmpty(null)      = false
     * StringUtils.isNotEmpty('')        = false
     * StringUtils.isNotEmpty(' ')       = true
     * StringUtils.isNotEmpty('bob')     = true
     * StringUtils.isNotEmpty('  bob  ') = true
    global static Boolean isNotEmpty(final String cs) {
-
-    @isTest(SeeAllData=false)
-    static void XXXXX() {
+*/    
     }
 
+    @isTest(SeeAllData=false)
+    static void isNumeric() {
+/*
     StringUtils.isNumeric(null)   = false
      * StringUtils.isNumeric('')     = false
      * StringUtils.isNumeric('  ')   = false
@@ -571,40 +554,37 @@ private class StringUtilsTest {
      * StringUtils.isNumeric('-123') = false
      * StringUtils.isNumeric('+123') = false
     global static Boolean isNumeric(final String cs) {
+*/    
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        StringUtils.isWhitespace(null)   = false
+    @isTest(SeeAllData=false)
+    static void isWhitespace() {
+/*        StringUtils.isWhitespace(null)   = false
      * StringUtils.isWhitespace('')     = true
      * StringUtils.isWhitespace('  ')   = true
      * StringUtils.isWhitespace('abc')  = false
      * StringUtils.isWhitespace('ab2c') = false
      * StringUtils.isWhitespace('ab-c') = false
     global static Boolean isWhitespace(final String cs) {
-
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/    
+    }
     
-        StringUtils.lastIndexOf(null, *)          = -1
+        @isTest(SeeAllData=false)
+        static void lastIndexOf2args1() {
+    /*    StringUtils.lastIndexOf(null, *)          = -1
      * StringUtils.lastIndexOf(*, null)          = -1
      * StringUtils.lastIndexOf('', '')           = 0
      * StringUtils.lastIndexOf('aabaabaa', 'a')  = 7
      * StringUtils.lastIndexOf('aabaabaa', 'b')  = 5
      * StringUtils.lastIndexOf('aabaabaa', 'ab') = 4
      * StringUtils.lastIndexOf('aabaabaa', '')   = 8
-    global static Integer lastIndexOf(final String seq, final String searchSeq) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
+    global static Integer lastIndexOf(final String seq, final String searchSeq) {*/
         }
     
 
-
+        @isTest(SeeAllData=false)
+        static void lastIndexOf3args() {
+/*
      * StringUtils.lastIndexOf(null, *, *)          = -1
      * StringUtils.lastIndexOf(*, null, *)          = -1
      * StringUtils.lastIndexOf('aabaabaa', 'a', 8)  = 7
@@ -618,65 +598,58 @@ private class StringUtilsTest {
      * StringUtils.lastIndexOf('aabaabaa', 'b', 2)  = 2
      * StringUtils.lastIndexOf('aabaabaa', 'ba', 2)  = 2
     global static Integer lastIndexOf(final String seq, final String searchSeq, final Integer startPos) {
-      
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
+    */
         }
     
 
-        StringUtils.lastIndexOf(null, *)         = -1
+
+    @isTest(SeeAllData=false)
+    static void lastIndexOf2args2() {
+/*        StringUtils.lastIndexOf(null, *)         = -1
      * StringUtils.lastIndexOf('', *)           = -1
      * StringUtils.lastIndexOf('aabaabaa', 'a') = 7
      * StringUtils.lastIndexOf('aabaabaa', 'b') = 5
     global static Integer lastIndexOf(final String seq, final Integer searchChar) {
-
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/    }
     
-        StringUtils.left(null, *)    = null
+    @isTest(SeeAllData=false)
+    static void left2args() {
+/*        StringUtils.left(null, *)    = null
      * StringUtils.left(*, -ve)     = ''
      * StringUtils.left('', *)      = ''
      * StringUtils.left('abc', 0)   = ''
      * StringUtils.left('abc', 2)   = 'ab'
      * StringUtils.left('abc', 4)   = 'abc'
     global static String left(final String str, final Integer len) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/    }
     
 
-
-     * StringUtils.leftPad(null, *)   = null
+    @isTest(SeeAllData=false)
+    static void leftPad2args() {
+/*     * StringUtils.leftPad(null, *)   = null
      * StringUtils.leftPad('', 3)     = '   '
      * StringUtils.leftPad('bat', 3)  = 'bat'
      * StringUtils.leftPad('bat', 5)  = '  bat'
      * StringUtils.leftPad('bat', 1)  = 'bat'
      * StringUtils.leftPad('bat', -1) = 'bat'
-    global static String leftPad(final String str, final Integer size) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+    global static String leftPad(final String str, final Integer size) {*/    
+    }
     
-
-        StringUtils.leftPad(null, *, *)     = null
+    @isTest(SeeAllData=false)
+    static void leftPad() {
+/*        StringUtils.leftPad(null, *, *)     = null
      * StringUtils.leftPad('', 3, 'z')     = 'zzz'
      * StringUtils.leftPad('bat', 3, 'z')  = 'bat'
      * StringUtils.leftPad('bat', 5, 'z')  = 'zzbat'
      * StringUtils.leftPad('bat', 1, 'z')  = 'bat'
      * StringUtils.leftPad('bat', -1, 'z') = 'bat'
-    global static String leftPad(final String str, final Integer size, final Integer/*char*/ padChar) {
-      
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+    global static String leftPad(final String str, final Integer size, final Integer/*char padChar) {
+    */
+    }
     
-
-        StringUtils.leftPad(null, *, *)      = null
+    @isTest(SeeAllData=false)
+    static void leftPad3args() {
+/*        StringUtils.leftPad(null, *, *)      = null
      * StringUtils.leftPad('', 3, 'z')      = 'zzz'
      * StringUtils.leftPad('bat', 3, 'yz')  = 'bat'
      * StringUtils.leftPad('bat', 5, 'yz')  = 'yzbat'
@@ -686,35 +659,27 @@ private class StringUtilsTest {
      * StringUtils.leftPad('bat', 5, null)  = '  bat'
      * StringUtils.leftPad('bat', 5, '')    = '  bat'
     global static String leftPad(final String str, final Integer size, String padStr) {
-
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/   
+    }
     
-        global static Integer length(final String cs) {
-
-            @isTest(SeeAllData=false)
-            static void XXXXX() {
-            }
-        
+    @isTest(SeeAllData=false)
+    static void length1arg() {
+//        global static Integer length(final String cs) {
+    }
 
 
-
-
-
-     * StringUtils.lowerCase(null)  = null
+    @isTest(SeeAllData=false)
+    static void lowerCase() {
+        /*     * StringUtils.lowerCase(null)  = null
      * StringUtils.lowerCase('')    = ''
      * StringUtils.lowerCase('aBc') = 'abc'
     global static String lowerCase(final String str) {
+*/    
+    }
 
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-     * StringUtils.mid(null, *, *)    = null
+    @isTest(SeeAllData=false)
+    static void mid() {
+/*     * StringUtils.mid(null, *, *)    = null
      * StringUtils.mid(*, *, -ve)     = ''
      * StringUtils.mid('', 0, *)      = ''
      * StringUtils.mid('abc', 0, 2)   = 'ab'
@@ -722,104 +687,61 @@ private class StringUtilsTest {
      * StringUtils.mid('abc', 2, 4)   = 'c'
      * StringUtils.mid('abc', 4, 2)   = ''
      * StringUtils.mid('abc', -2, 2)  = 'ab'
-     * </pre>
-     *
-     * @param str  the String to get the characters from, may be null
-     * @param pos  the position to start from, negative treated as zero
-     * @param len  the length of the required String
-     * @return the middle characters, {@code null} if null String input
-     */
     global static String mid(final String str, Integer pos, final Integer len) {
+*/  
+    }
 
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-     * StringUtils.repeat(null, 2) = null
+    @isTest(SeeAllData=false)
+    static void repeat2args() {
+/*     * StringUtils.repeat(null, 2) = null
      * StringUtils.repeat('', 0)   = ''
      * StringUtils.repeat('', 2)   = ''
      * StringUtils.repeat('a', 3)  = 'aaa'
      * StringUtils.repeat('ab', 2) = 'abab'
      * StringUtils.repeat('a', -2) = ''
-     * </pre>
-     *
-     * @param str  the String to repeat, may be null
-     * @param repeat  number of times to repeat str, negative treated as zero
-     * @return a new String consisting of the original String repeated,
-     *  {@code null} if null String input
-     */
     global static String repeat(final String str, final Integer repeat) {
-        // Performance tuned for 2.0 (JDK1.4)
+*/
+    }    
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        * StringUtils.right(null, *)    = null
+    @isTest(SeeAllData=false)
+    static void right2args() {
+     /*   * StringUtils.right(null, *)    = null
         * StringUtils.right(*, -ve)     = ''
         * StringUtils.right('', *)      = ''
         * StringUtils.right('abc', 0)   = ''
         * StringUtils.right('abc', 2)   = 'bc'
         * StringUtils.right('abc', 4)   = 'abc'
-        * </pre>
-        *
-        * @param str  the String to get the rightmost characters from, may be null
-        * @param len  the length of the required String
-        * @return the rightmost characters, {@code null} if null String input
-        */
        global static String right(final String str, final Integer len) {
+*/
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-     * StringUtils.rightPad(null, *)   = null
+    @isTest(SeeAllData=false)
+    static void rightPad2args() {
+/*     * StringUtils.rightPad(null, *)   = null
      * StringUtils.rightPad('', 3)     = '   '
      * StringUtils.rightPad('bat', 3)  = 'bat'
      * StringUtils.rightPad('bat', 5)  = 'bat  '
      * StringUtils.rightPad('bat', 1)  = 'bat'
      * StringUtils.rightPad('bat', -1) = 'bat'
-     * </pre>
-     *
-     * @param str  the String to pad out, may be null
-     * @param size  the size to pad to
-     * @return right padded String or original String if no padding is necessary,
-     *  {@code null} if null String input
-     */
     global static String rightPad(final String str, final Integer size) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/
+    }
     
-        StringUtils.rightPad(null, *, *)     = null
+    @isTest(SeeAllData=false)
+    static void rightPad3args() {
+/*        StringUtils.rightPad(null, *, *)     = null
      * StringUtils.rightPad('', 3, 'z')     = 'zzz'
      * StringUtils.rightPad('bat', 3, 'z')  = 'bat'
      * StringUtils.rightPad('bat', 5, 'z')  = 'batzz'
      * StringUtils.rightPad('bat', 1, 'z')  = 'bat'
      * StringUtils.rightPad('bat', -1, 'z') = 'bat'
-     * </pre>
-     *
-     * @param str  the String to pad out, may be null
-     * @param size  the size to pad to
-     * @param padChar  the character to pad with
-     * @return right padded String or original String if no padding is necessary,
-     *  {@code null} if null String input
-     * @since 2.0
-     */
     global static String rightPad(final String str, final Integer size, final Integer padChar) {
-      
+   */  
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-     * StringUtils.rightPad(null, *, *)      = null
+    @isTest(SeeAllData=false)
+    static void rightPad3args2() {
+/*     * StringUtils.rightPad(null, *, *)      = null
      * StringUtils.rightPad('', 3, 'z')      = 'zzz'
      * StringUtils.rightPad('bat', 3, 'yz')  = 'bat'
      * StringUtils.rightPad('bat', 5, 'yz')  = 'batyz'
@@ -828,22 +750,13 @@ private class StringUtilsTest {
      * StringUtils.rightPad('bat', -1, 'yz') = 'bat'
      * StringUtils.rightPad('bat', 5, null)  = 'bat  '
      * StringUtils.rightPad('bat', 5, '')    = 'bat  '
-     * </pre>
-     *
-     * @param str  the String to pad out, may be null
-     * @param size  the size to pad to
-     * @param padStr  the String to pad with, null or empty treated as single space
-     * @return right padded String or original String if no padding is necessary,
-     *  {@code null} if null String input
-     */
     global static String rightPad(final String str, final Integer size, String padStr) {
+*/    
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        StringUtils.rotate(null, *)        = null
+    @isTest(SeeAllData=false)
+    static void rotate2args() {
+/*        StringUtils.rotate(null, *)        = null
      * StringUtils.rotate('', *)          = ''
      * StringUtils.rotate('abcdefg', 0)   = 'abcdefg'
      * StringUtils.rotate('abcdefg', 2)   = 'fgabcde'
@@ -852,73 +765,42 @@ private class StringUtilsTest {
      * StringUtils.rotate('abcdefg', -7)  = 'abcdefg'
      * StringUtils.rotate('abcdefg', 9)   = 'fgabcde'
      * StringUtils.rotate('abcdefg', -9)  = 'cdefgab'
-     * </pre>
-     *
-     * @param str  the String to rotate, may be null
-     * @param shift  number of time to shift (positive : right shift, negative : left shift)
-     * @return the rotated String,
-     *          or the original String if {@code shift == 0},
-     *          or {@code null} if null String input
-     * @since 3.5
-     */
     global static String rotate(final String str, final Integer shift) {
+*/    
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        StringUtils.startsWith(null, null)      = true
+    @isTest(SeeAllData=false)
+    static void startsWith2args() {
+/*        StringUtils.startsWith(null, null)      = true
      * StringUtils.startsWith(null, 'abc')     = false
      * StringUtils.startsWith('abcdef', null)  = false
      * StringUtils.startsWith('abcdef', 'abc') = true
      * StringUtils.startsWith('ABCDEF', 'abc') = false
-     * </pre>
-     *
-     * @see java.lang.String#startsWith(String)
-     * @param str  the CharSequence to check, may be null
-     * @param prefix the prefix to find, may be null
-     * @return {@code true} if the CharSequence starts with the prefix, case sensitive, or
-     *  both {@code null}
-     * @since 2.4
-     * @since 3.0 Changed signature from startsWith(String, String) to startsWith(CharSequence, CharSequence)
-     */
     global static Boolean startsWith(final String str, final String prefix) {
+*/
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
+    @isTest(SeeAllData=false)
+    static void startsWith() {
+//        private static Boolean startsWith(final String str, final String prefix, final Boolean ignoreCase) {
+    }
 
-        private static Boolean startsWith(final String str, final String prefix, final Boolean ignoreCase) {
-
-            @isTest(SeeAllData=false)
-            static void XXXXX() {
-            }
-        
-
-            StringUtils.substring(null, *)   = null
+    @isTest(SeeAllData=false)
+    static void substring2arg() {
+/*            StringUtils.substring(null, *)   = null
      * StringUtils.substring('', *)     = ''
      * StringUtils.substring('abc', 0)  = 'abc'
      * StringUtils.substring('abc', 2)  = 'c'
      * StringUtils.substring('abc', 4)  = ''
      * StringUtils.substring('abc', -2) = 'bc'
      * StringUtils.substring('abc', -4) = 'abc'
-     * </pre>
-     *
-     * @param str  the String to get the substring from, may be null
-     * @param start  the position to start from, negative means
-     *  count back from the end of the String by this many characters
-     * @return substring from start position, {@code null} if null String input
-     */
     global static String substring(final String str, Integer start) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        StringUtils.substring(null, *, *)    = null
+*/  
+    }
+        
+    @isTest(SeeAllData=false)
+    static void substring3args() {
+/*        StringUtils.substring(null, *, *)    = null
      * StringUtils.substring('', * ,  *)    = '';
      * StringUtils.substring('abc', 0, 2)   = 'ab'
      * StringUtils.substring('abc', 2, 0)   = ''
@@ -927,77 +809,47 @@ private class StringUtilsTest {
      * StringUtils.substring('abc', 2, 2)   = ''
      * StringUtils.substring('abc', -2, -1) = 'b'
      * StringUtils.substring('abc', -4, 2)  = 'ab'
-     * </pre>
-     *
-     * @param str  the String to get the substring from, may be null
-     * @param start  the position to start from, negative means
-     *  count back from the end of the String by this many characters
-     * @param end1  the position to end at (exclusive), negative means
-     *  count back from the end of the String by this many characters
-     * @return substring from start position to end position,
-     *  {@code null} if null String input
-     */
     global static String substring(final String str, Integer start, Integer end1) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/    
+    }
     
-
-        StringUtils.trim(null)          = null
+    @isTest(SeeAllData=false)
+    static void trim() {
+/*        StringUtils.trim(null)          = null
      * StringUtils.trim('')            = ''
      * StringUtils.trim('     ')       = ''
      * StringUtils.trim('abc')         = 'abc'
      * StringUtils.trim('    abc    ') = 'abc'
-     * </pre>
-     *
-     * @param str  the String to be trimmed, may be null
-     * @return the trimmed string, {@code null} if null String input
-     */
     global static String trim(final String str) {
+*/    
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-        StringUtils.trimToEmpty(null)          = ''
+    @isTest(SeeAllData=false)
+    static void trimToEmpty() {
+/*        StringUtils.trimToEmpty(null)          = ''
      * StringUtils.trimToEmpty('')            = ''
      * StringUtils.trimToEmpty('     ')       = ''
      * StringUtils.trimToEmpty('abc')         = 'abc'
      * StringUtils.trimToEmpty('    abc    ') = 'abc'
-     * </pre>
-     *
-     * @param str  the String to be trimmed, may be null
-     * @return the trimmed String, or an empty String if {@code null} input
-     * @since 2.0
-     */
     global static String trimToEmpty(final String str) {
+*/        
+    }
+    
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-
-        
-        StringUtils.trimToNull(null)          = null
+    @isTest(SeeAllData=false)
+    static void trimToNull() {
+/*        StringUtils.trimToNull(null)          = null
      * StringUtils.trimToNull('')            = null
      * StringUtils.trimToNull('     ')       = null
      * StringUtils.trimToNull('abc')         = 'abc'
      * StringUtils.trimToNull('    abc    ') = 'abc'
-     * </pre>
-     *
-     * @param str  the String to be trimmed, may be null
-     * @return the trimmed String,
-     *  {@code null} if only chars &lt;= 32, empty or null String input
-     * @since 2.0
-     */
     global static String trimToNull(final String str) {
+*/        
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        StringUtils.truncate(null, 0)       = null
+    @isTest(SeeAllData=false)
+    static void truncate2args() {
+/*        StringUtils.truncate(null, 0)       = null
      * StringUtils.truncate(null, 2)       = null
      * StringUtils.truncate('', 4)         = ''
      * StringUtils.truncate('abcdefg', 4)  = 'abcd'
@@ -1005,22 +857,13 @@ private class StringUtilsTest {
      * StringUtils.truncate('abcdefg', 7)  = 'abcdefg'
      * StringUtils.truncate('abcdefg', 8)  = 'abcdefg'
      * StringUtils.truncate('abcdefg', -1) = throws an IllegalArgumentException
-     * </pre>
-     *
-     * @param str  the String to truncate, may be null
-     * @param maxWidth  maximum length of result String, must be positive
-     * @return truncated String, {@code null} if null String input
-     * @throws IllegalArgumentException If {@code maxWidth} is less than {@code 0}
-     * @since 3.5
-     */
     global static String truncate(final String str, final Integer maxWidth) {
-
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/    
+    }
     
-        StringUtils.truncate(null, 0, 0) = null
+    @isTest(SeeAllData=false)
+    static void truncate3args() {
+/*        StringUtils.truncate(null, 0, 0) = null
         * StringUtils.truncate(null, 2, 4) = null
         * StringUtils.truncate('', 0, 10) = ''
         * StringUtils.truncate('', 2, 10) = ''
@@ -1050,23 +893,13 @@ private class StringUtilsTest {
         * StringUtils.truncate('abcdefghijklmno', Integer.MAX_VALUE, Integer.MAX_VALUE) = ''
         * StringUtils.truncate('abcdefghij', 3, -1) = throws an IllegalArgumentException
         * StringUtils.truncate('abcdefghij', -2, 4) = throws an IllegalArgumentException
-        * </pre>
-        *
-        * @param str  the String to truncate, may be null
-        * @param offset  left edge of source String
-        * @param maxWidth  maximum length of result String, must be positive
-        * @return truncated String, {@code null} if null String input
-        * @throws IllegalArgumentException If {@code offset} or {@code maxWidth} is less than {@code 0}
-        * @since 3.5
-        */
        global static String truncate(final String str, final Integer offset, final Integer maxWidth) {
-    
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-       
-
-        StringUtils.unwrap(null, null)         = null
+  */    
+    }
+  
+    @isTest(SeeAllData=false)
+    static void unwrap2args1() {
+/*        StringUtils.unwrap(null, null)         = null
      * StringUtils.unwrap(null, '\0')         = null
      * StringUtils.unwrap(null, '1')          = null
      * StringUtils.unwrap('a', 'a')           = 'a'
@@ -1076,24 +909,13 @@ private class StringUtilsTest {
      * StringUtils.unwrap('A', '#')           = 'A'
      * StringUtils.unwrap('#A', '#')          = '#A'
      * StringUtils.unwrap('A#', '#')          = 'A#'
-     * </pre>
-     *
-     * @param str
-     *          the String to be unwrapped, can be null
-     * @param wrapChar
-     *          the character used to unwrap
-     * @return unwrapped String or the original string
-     *          if it is not quoted properly with the wrapChar
-     * @since 3.6
-     */
     global static String unwrap(final String str, final Integer wrapChar) {
+*/
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        StringUtils.unwrap(null, null)         = null
+    @isTest(SeeAllData=false)
+    static void unwrap2args2() {
+/*        StringUtils.unwrap(null, null)         = null
      * StringUtils.unwrap(null, '')           = null
      * StringUtils.unwrap(null, '1')          = null
      * StringUtils.unwrap('a', 'a')           = 'a'
@@ -1104,73 +926,40 @@ private class StringUtilsTest {
      * StringUtils.unwrap('A', '#')           = 'A'
      * StringUtils.unwrap('#A', '#')          = '#A'
      * StringUtils.unwrap('A#', '#')          = 'A#'
-     * </pre>
-     *
-     * @param str
-     *          the String to be unwrapped, can be null
-     * @param wrapToken
-     *          the String used to unwrap
-     * @return unwrapped String or the original string
-     *          if it is not quoted properly with the wrapToken
-     * @since 3.6
-     */
     global static String unwrap(final String str, final String wrapToken) {
-
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/
+    }
     
-        StringUtils.upperCase(null)  = null
+    @isTest(SeeAllData=false)
+    static void upperCase() {
+/*        StringUtils.upperCase(null)  = null
      * StringUtils.upperCase('')    = ''
      * StringUtils.upperCase('aBc') = 'ABC'
-     * </pre>
-     *
-     * <p><strong>Note:</strong> As described in the documentation for {@link String#toUpperCase()},
-     * the result of this method is affected by the current locale.
-     * For platform-independent case transformations, the method {@link #lowerCase(String, Locale)}
-     * should be used with a specific locale (e.g. {@link Locale#ENGLISH}).</p>
-     *
-     * @param str  the String to upper case, may be null
-     * @return the upper cased String, {@code null} if null String input
-     */
     global static String upperCase(final String str) {
+*/
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+
+    @isTest(SeeAllData=false)
+    static void valueOf() {
+//            global static String valueOf(final Integer[] value) {
+    }
     
-
-        global static String valueOf(final Integer[] value) {
-
-            @isTest(SeeAllData=false)
-            static void XXXXX() {
-            }
-        
-
-            StringUtils.wrap(null, *)        = null
+    @isTest(SeeAllData=false)
+    static void wrap2args() {
+/*            StringUtils.wrap(null, *)        = null
      * StringUtils.wrap('', *)          = ''
      * StringUtils.wrap('ab', '\0')     = 'ab'
      * StringUtils.wrap('ab', 'x')      = 'xabx'
      * StringUtils.wrap('ab', '\'')     = ''ab''
      * StringUtils.wrap('\'ab\'', '\'') = '\'\'ab\'\''
-     * </pre>
-     *
-     * @param str
-     *            the string to be wrapped, may be {@code null}
-     * @param wrapWith
-     *            the char that will wrap {@code str}
-     * @return the wrapped string, or {@code null} if {@code str==null}
-     * @since 3.4
-     */
     global static String wrap(final String str, final Integer wrapWith) {
+*/
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-        StringUtils.wrap(null, *)         = null
+    @isTest(SeeAllData=false)
+    static void wrap2args2() {
+/*        StringUtils.wrap(null, *)         = null
      * StringUtils.wrap('', *)           = ''
      * StringUtils.wrap('ab', null)      = 'ab'
      * StringUtils.wrap('ab', 'x')       = 'xabx'
@@ -1180,23 +969,15 @@ private class StringUtilsTest {
      * StringUtils.wrap(''abcd'', ''')   = '''abcd'''
      * StringUtils.wrap('\'abcd\'', ''') = ''\'abcd\'''
      * StringUtils.wrap(''abcd'', '\'')  = '\''abcd'\''
-     * </pre>
-     *
-     * @param str
-     *            the String to be wrapper, may be null
-     * @param wrapWith
-     *            the String that will wrap str
-     * @return wrapped String, {@code null} if null String input
-     * @since 3.4
-     */
     global static String wrap(final String str, final String wrapWith) {
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
+*/
+    }
     
 
-        StringUtils.wrapIfMissing(null, *)        = null
+
+        @isTest(SeeAllData=false)
+        static void wrapIfMissing2args() {
+/*        StringUtils.wrapIfMissing(null, *)        = null
      * StringUtils.wrapIfMissing('', *)          = ''
      * StringUtils.wrapIfMissing('ab', '\0')     = 'ab'
      * StringUtils.wrapIfMissing('ab', 'x')      = 'xabx'
@@ -1206,24 +987,13 @@ private class StringUtilsTest {
      * StringUtils.wrapIfMissing('a/b/c', '/')  = '/a/b/c/'
      * StringUtils.wrapIfMissing('/a/b/c', '/')  = '/a/b/c/'
      * StringUtils.wrapIfMissing('a/b/c/', '/')  = '/a/b/c/'
-     * </pre>
-     *
-     * @param str
-     *            the string to be wrapped, may be {@code null}
-     * @param wrapWith
-     *            the char that will wrap {@code str}
-     * @return the wrapped string, or {@code null} if {@code str==null}
-     * @since 3.5
-     */
     global static String wrapIfMissing(final String str, final Integer wrapWith) {
+*/
+    }
 
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-    
-
-
-        StringUtils.wrapIfMissing(null, *)         = null
+    @isTest(SeeAllData=false)
+    static void wrapIfMissing() {
+/*        StringUtils.wrapIfMissing(null, *)         = null
      * StringUtils.wrapIfMissing('', *)           = ''
      * StringUtils.wrapIfMissing('ab', null)      = 'ab'
      * StringUtils.wrapIfMissing('ab', 'x')       = 'xabx'
@@ -1237,23 +1007,7 @@ private class StringUtilsTest {
      * StringUtils.wrapIfMissing('a/b/c', '/')  = '/a/b/c/'
      * StringUtils.wrapIfMissing('/a/b/c', '/')  = '/a/b/c/'
      * StringUtils.wrapIfMissing('a/b/c/', '/')  = '/a/b/c/'
-     * </pre>
-     *
-     * @param str
-     *            the string to be wrapped, may be {@code null}
-     * @param wrapWith
-     *            the string that will wrap {@code str}
-     * @return the wrapped string, or {@code null} if {@code str==null}
-     * @since 3.5
-     */
     global static String wrapIfMissing(final String str, final String wrapWith) {
-
-
-        @isTest(SeeAllData=false)
-        static void XXXXX() {
-        }
-         
-
-
-
+*/
+    }
 }
